# audio-reader-osc

./: .releaserc.yml  CHANGELOG.md  MANIFEST.in  MIRROR.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/audio_reader_osc/: __init__.py  __main__.py  cli.py  main.py  utils.py
tests/: conftest.py  test_audio_reader_osc.py
tests/test_folder/: text_associations.json
tests/test_folder_with_no_audio_files/: text_associations.json
