[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_reader_osc"
dependencies = [
    "logger @ git+https://gitlab.com/ameliend/logger.git",
    "chatbox_osc @ git+https://gitlab.com/ameliend/chatbox_osc.git",
    "python_osc>=1.9.0,<2",
    "pygame>=2.6.0,<3"
]
requires-python = ">= 3.10"
authors = [
  {name = "Amelien Deshams", email = "a.deshams+git@slmail.me"}
]
maintainers = [
  {name = "Amelien Deshams", email = "a.deshams+git@slmail.me"}
]
description = "Read random audio files in the given directory and send their corresponding text output to VRChat via OSC."
readme = "README.md"
license = { text = "MIT license" }
keywords = []
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT license",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
dynamic = ["version"]

[project.optional-dependencies]
documentation = [
    "recommonmark",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon",
]
tests = [
    "pytest",
]
utils = [
    "whisper_dictate @ git+https://gitlab.com/ameliend/whisper-dictate.git",
]

[project.urls]
Repository = "https://gitlab.com/ameliend/audio-reader-osc"
Issues = "https://gitlab.com/ameliend/audio-reader-osc/issues"
Changelog = "https://gitlab.com/ameliend/audio-reader-osc/blob/main/CHANGELOG.md"

# Remove these lines if you don't want to use scripts in you project
[project.scripts]
audio_reader_osc = "audio_reader_osc.cli:main_cli"
create_text_associations = "audio_reader_osc.cli:create_text_associations_cli"
create_text_associations_for_musics = "audio_reader_osc.cli:create_text_associations_for_musics_cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = { attr = "audio_reader_osc._version.__version__" }

[tool.ruff]
extend-exclude = ["tests", "docs"]
line-length = 110
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # No need to document the module if it's already explicit enough.
    "D413", # No need to add a blank line after the last section of a docstring
    "D107", # When hovering a class in Visual Studio Code, it displays the docstring
    # of the class and not the __init__.
    "ANN001", # Sometimes we don't know the type of the argument.
    "DTZ", # No need to precise the time zones.
    "RUF012", # I don't really know the needs of this.
    "FBT", # We want to use Boolean positional arguments.
    "ANN002", # Sometimes we don't know the type of the *args argument.
    "ANN003", # Sometimes we don't know the type of the *kwargs argument.
    "INP001", # Because the `docs` folder is not a Python Package.
    "S311",
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
indent-style = "space"
